--- a/notika/green-horizotal/flot-charts.html
+++ b/notika/green-horizotal/flot-charts.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-page-module="flot-charts">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -606,7 +606,7 @@
     <!-- End Footer area-->
 
     <!-- ONLY VITE ENTRY POINT - Everything else bundled by Vite -->
-    <script type="module" src="/src/js/main.js"></script>
+    <script type="module" src="/src/js/pages/flot-charts.js"></script>
 
     <!-- Clean Navigation JavaScript -->
     <script>
