--- a/notika/green-horizotal/form-components.html
+++ b/notika/green-horizotal/form-components.html
@@ -1035,7 +1035,7 @@
                                 <p style="color: #666; margin-bottom: 20px;">Supports: JPG, PNG, PDF, DOC (Max: 10MB)</p>
                                 <input type="file" id="file-input" multiple accept=".jpg,.jpeg,.png,.pdf,.doc,.docx" style="display: none;" onchange="handleFileSelect(event)">
                                 <button type="button" class="btn btn-primary" onclick="document.getElementById('file-input').click()">
-                                    📁 Choose Files
+                                    <i class="fa-solid fa-folder-open"></i> Choose Files
                                 </button>
                                 <div id="file-list" style="margin-top: 20px;"></div>
                             </div>
