--- a/notika/green-horizotal/form-elements.html
+++ b/notika/green-horizotal/form-elements.html
@@ -811,6 +811,20 @@
     </div>
     <!-- Form Element area End-->
 
+    <!-- Start Footer area-->
+    <div class="footer-copyright-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-12">
+                    <div class="footer-copy-right">
+                        <p>Copyright © 2025. All rights reserved. Template by <a href="https://colorlib.com">Colorlib</a>.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Footer area-->
+
     <!-- Vite JavaScript Entry Point -->
     <script type="module" src="src/js/pages/form-elements.js"></script>
 
