--- a/notika/green-horizotal/login-register.html
+++ b/notika/green-horizotal/login-register.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-page-module="login-register">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,8 +7,7 @@
     <meta name="description" content="Login and registration - Notika Admin Template">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/logo/notika-icon.svg">
-    <link rel="alternate icon" href="/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -105,7 +104,7 @@
     <!-- Login Register area End-->
 
     <!-- ONLY VITE ENTRY POINT - Everything else bundled by Vite -->
-    <script type="module" src="/src/js/main.js"></script>
+    <script type="module" src="/src/js/pages/login-register.js"></script>
 </body>
 
 </html>
