--- a/notika/green-horizotal/image-cropper.html
+++ b/notika/green-horizotal/image-cropper.html
@@ -614,7 +614,7 @@
                             <h5>Preview</h5>
                         </div>
                         <div class="cropper-preview-wrap">
-                            <cropper-viewer selection="cropper-selection"></cropper-viewer>
+                            <!-- cropper-viewer created dynamically after Cropper init -->
                         </div>
                     </div>
 
