Updated copyright year

--- a/notika/green-horizotal/image-cropper.html
+++ b/notika/green-horizotal/image-cropper.html
@@ -634,7 +634,7 @@
                                     <span>1:1</span>
                                 </button>
                                 <button type="button" class="cropper-ratio" data-ratio="1.7778">
-                                    <i class="fa-solid fa-rectangle-wide fa-fw"></i>
+                                    <i class="fa-solid fa-display"></i>
                                     <span>16:9</span>
                                 </button>
                                 <button type="button" class="cropper-ratio" data-ratio="1.3333">
@@ -675,7 +675,7 @@
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-12">
                     <div class="footer-copy-right">
-                        <p>Copyright © 2025
+                        <p>Copyright © 2026
 . All rights reserved. Template by <a href="https://colorlib.com">Colorlib</a>.</p>
                     </div>
                 </div>
